--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,9 @@ scikit-learn = "*"
 seaborn = "*"
 scipy = "*"
 streamlit = "*"
+snowflake-snowpark-python = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8.16"
